# ChangeLog for sys-libs/libixp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libixp/ChangeLog,v 1.10 2009/07/11 11:12:37 omp Exp $

*libixp-0.5 (11 Jul 2009)

  11 Jul 2009; <omp@gentoo.org> +libixp-0.5.ebuild:
  Version bump. (bug #268693)

  19 Nov 2007; David Shakaryan <omp@gentoo.org> libixp-0.2-r1.ebuild:
  Fix small version mistake in blocker dependency.

  19 Nov 2007; David Shakaryan <omp@gentoo.org> libixp-0.2-r1.ebuild:
  Add newer version as a blocker dependency for older version. (bug #199556)

*libixp-0.4 (18 Nov 2007)

  18 Nov 2007; David Shakaryan <omp@gentoo.org> +libixp-0.4.ebuild:
  Version bump.

  24 Jun 2007; David Shakaryan <omp@gentoo.org>
  files/libixp-0.2-shared-object.patch:
  Updated patch by Luke Renn. (bug #170439)

  23 Feb 2007; David Shakaryan <omp@gentoo.org> libixp-0.2-r1.ebuild:
  Inherit eutils. (bug #161105)

  20 Jan 2007; Markus Rothe <corsair@gentoo.org> libixp-0.2-r1.ebuild:
  Added ~ppc64

  17 Jan 2007; David Shakaryan <omp@gentoo.org> -libixp-0.2.ebuild,
  libixp-0.2-r1.ebuild:
  Fix sed expression. (bug #160326)

  10 Jan 2007; David Shakaryan <omp@gentoo.org>
  +files/libixp-0.2-shared-object.patch, +libixp-0.2-r1.ebuild:
  Compile shared object file; thanks to Maxim Treskin for patch. (bug #161105)

  28 Dec 2006; David Shakaryan <omp@gentoo.org> +libixp-0.2.ebuild,
  +metadata.xml:
  Add sys-libs/libixp to tree.
