@@ -5,15 +5,15 @@ AUX libixp-0.2-shared-object.patch 2509 RMD160 6b05223019d36a8c904a488e3cfdae0c3
 DIST libixp-0.2.tar.gz 20701 RMD160 a0738f88ea8b150f1eead51ef9270bf567d7795e SHA1 14e11b5ae179415e1353df4e0d4bc6cb1b434156 SHA256 5e5eec16dd02bce3f014b90df029e91136031852568ff9a147d3f99f6eaf0143
 DIST libixp-0.4.tar.gz 130229 RMD160 240fe1cb16eac23cf00bffb93df1b13201c9c1ba SHA1 ec1adfeb4c5f502dfcb1b99fcf440841ecee2f9a SHA256 171878dfb67ecf47866843c2d25882aeae44b2efd9a0d685f3b7ffba79ba842c
 DIST libixp-0.5.tar.gz 142064 RMD160 83670f829a1ff185f2df744fd33d56649b2b2b35 SHA1 6cb9d3e7c6323acd4c3876f6a01ad5d8af9e1c6a SHA256 65f4f0bb67e83cbd1414f297e22648c867f914e2498bdbae3afdc0f83be21e4b
-EBUILD libixp-0.2-r1.ebuild 920 RMD160 5bbb7ef566bfce66c740e853f7675ec913db0e92 SHA1 758f5f6904782d28b6edd55f5cbc0f01e4663e68 SHA256 fdc7a0967791e8099557de23ae3130d4a8492cf26fbe6474d07f1a092fff235d
-EBUILD libixp-0.4.ebuild 807 RMD160 938c6fb27bac1196be73f3ef48ec1748623a5758 SHA1 2aeb93bd891e5d2da36991dc77f6959d17f89059 SHA256 71ce24ba6a93e2820d26a254e85301c9b78845deec17810a449ab3f6c63767b8
-EBUILD libixp-0.5.ebuild 789 RMD160 0db63a441ab3d54fb78eaa70bf6e6a51d700b800 SHA1 123189593932249eb0a8bb548dc8a6471ef98569 SHA256 1284ae4ff49845a68f4d5762a664f6abb3c7d80c04fcc967e34deab35bb25dd0
-MISC ChangeLog 1454 RMD160 dba3a686e09c2e57f4f6a5abe624ed654361aeed SHA1 2990fc68200151142e7cbcfdf6b14a3d13d3c00b SHA256 ea3a36326dd7e17028304a35bd017aa4f9ea4cc30fb19812b2fc68f18ac3f0ec
+EBUILD libixp-0.2-r1.ebuild 1151 RMD160 31245e06d6f12141c6e74bdca59c6fdcb800bec0 SHA1 9544622966cde31a8174ccbb0c6dc222dd779a9e SHA256 a37c771eb0e355927749aa3397b097997a6a92572101870177874f6ee592618b
+EBUILD libixp-0.4.ebuild 1049 RMD160 0f6b77f08d092ba8f68347938317481509cfe270 SHA1 8ca61b870fc1ef7a64fd078f68cc4a43b4440d9c SHA256 74f5ad5c96c332b6a3542ca7b5a393fee9b4e70c9ca994e895d8fd1a08cae2e9
+EBUILD libixp-0.5.ebuild 840 RMD160 0a61ee843fba7718224e52b4f0a3cd06880b1773 SHA1 58b61306f176f926646a1a7938c530f1b8b9c6d1 SHA256 3f58853fbc7c39436d7e712b13e97eff2b233d1a330bf5be9a92c45f3c97fa7c
+MISC ChangeLog 1696 RMD160 64480b2f00c4482dd2b5a0d7b6947f4ade15878c SHA1 90b432da651fb5f78269cc403768b370bb66faac SHA256 95b5a09c72375f6e86974fc84e358e997ce33bfb09c7d38c6e4752dcac873a2a
 MISC metadata.xml 260 RMD160 dbaa41ad7e8690ea69581ffd7942620f933f4034 SHA1 d33ecf36eb5ec0c109a094cbb3fa118ddf19a13e SHA256 90b3aa60c9ccae72a239a37d39549809f8726dfaa9d0dcfebf173bb12c977492
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpYc7cACgkQvSApE0uP4Uv09QCdGXG9cjiVdWvPleNU5fXEIAvf
-6bUAnAjQnfzWWWMItqonBBK03DPJBJgO
-=5u7G
+iEYEARECAAYFAkubIE0ACgkQni8M22OVw8D27QCffEYy+0h7CTJPTCSk76mY4a7X
+BVYAn0GCEK4V4KxFCfIalE1ic6MbViP/
+=e3rm
 -----END PGP SIGNATURE-----
