@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/libixp
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-libs/libixp/ChangeLog,v 1.10 2009/07/11 11:12:37 omp Exp $
+
+  13 Mar 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> libixp-0.2-r1.ebuild, libixp-0.4.ebuild,
+  libixp-0.5.ebuild:
+  Hacked these up to build and install libraries compatible with a multilib
+  system. Bug 309095.
 
 *libixp-0.5 (11 Jul 2009)
 
